--- a/website/pages/contributor.html
+++ b/website/pages/contributor.html
@@ -1,46 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dataverse's Contributors</title>
-    <link rel="stylesheet" href="../styles/contributor.css">
-    <link rel="shortcut icon" href="../web_images/3dlogo.svg" type="image/x-icon">
-</head>
-<body>
-        <div class="containerr">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Dataverse's Contributors</title>
+		<link rel="stylesheet" href="../styles/contributor.css" />
+		<link rel="shortcut icon" href="../web_images/3dlogo.svg" type="image/x-icon" />
+	</head>
+	<body>
+		<div class="containerr">
+			<!-- Stats Section -->
+			<section class="stats">
+				<h2>Dataverse's Contributors Statistics</h2>
+				<div class="stats-grid" id="statsGrid">
+					<!-- Stats will be dynamically inserted here -->
+				</div>
+			</section>
 
-            <!-- Stats Section -->
-            <section class="stats">
-                <h2>Dataverse's Contributors Statistics</h2>
-                <div class="stats-grid" id="statsGrid">
-                    <!-- Stats will be dynamically inserted here -->
-                </div>
-            </section>
+			<!-- Contributors Grid -->
+			<section class="contributors">
+				<h2>Meet Our Contributors</h2>
+				<div class="contributors-grid" id="contributorsGrid">
+					<!-- Contributors will be dynamically inserted here -->
+				</div>
+				<div id="loading" class="loading">
+					<div class="spinner"></div>
+				</div>
+			</section>
 
-            <!-- Contributors Grid -->
-            <section class="contributors">
-                <h2>Meet Our Contributors</h2>
-                <div class="contributors-grid" id="contributorsGrid">
-                    <!-- Contributors will be dynamically inserted here -->
-                </div>
-                <div id="loading" class="loading">
-                    <div class="spinner"></div>
-                </div>
-            </section>
+			<!-- Call to Action -->
+			<section id="contribute" class="cta">
+				<h2>Ready to Make an Impact?</h2>
+				<p>Join our community and help shape the future of Dataverse.</p>
+				<form
+					id="subscribeForm"
+					onsubmit="event.preventDefault(); window.location.href='https://github.com/multiverseweb/Dataverse';"
+				>
+					<button type="submit" class="btn btn-secondary">Join Community</button>
+				</form>
+				<div id="notification" class="notification hidden"></div>
+			</section>
+		</div>
+		<a href="../../index.html"><button class="goBack">Go To Home</button></a>
 
-            <!-- Call to Action -->
-            <section id="contribute" class="cta">
-                <h2>Ready to Make an Impact?</h2>
-                <p>Join our community and help shape the future of Dataverse.</p>
-                <form id="subscribeForm" onsubmit="event.preventDefault(); window.location.href='https://github.com/multiverseweb/Dataverse';">
-                    <button type="submit" class="btn btn-secondary">Join Community</button>
-                </form>
-                <div id="notification" class="notification hidden"></div>
-            </section>
-        </div>
-        <a href="../../index.html"><button class="goBack">Go To Home</button></a>
-
-    <script src="../scripts/contributor.js"></script>
-</body>
+		<script src="../scripts/contributor.js"></script>
+	</body>
 </html>
