--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
             </tr>
             <tr>
-                <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/.github/README.md"
+                <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
                         class="table_link">Documentation</a></td>
             </tr>
             <tr>
