--- a/website/pages/license.html
+++ b/website/pages/license.html
@@ -11,7 +11,7 @@
 
 <body id="body">
     <div class="buttons" id="buttons">
-        <div id="indicator"></div>
+        <div id="indicator" style="width: 50px; height: 50px"></div>
         <div class="group">
             <button id="darkButton" onclick="dark(false)">
                 <img src="https://static.thenounproject.com/png/4066359-200.png" class="copy" id="moon">
@@ -48,7 +48,7 @@
                 <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
             </tr>
             <tr>
-                <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/.github/README.md"
+                <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
                         class="table_link">Documentation</a></td>
             </tr>
             <tr>
@@ -112,6 +112,5 @@
     <a href="../../index.html"><button class="goBack">Go To Home</button></a>
 
     <script src="../scripts/license.js"></script>
-    <script src="../scripts/script.js"></script>
 </body>
 </html>
