--- a/website/pages/login.html
+++ b/website/pages/login.html
@@ -193,7 +193,14 @@
             }
         })
 
-        document.getElementById('loginButton').addEventListener('click', function() {
+        function login(event) {
+            // Check the identity of the key that was pressed.
+            if(event.type !== "click") {
+                if(event.key !== 'Enter') {
+                    return;
+                }
+            }
+            
             const emailInput = document.getElementById('emailInput');
             const passwordInput = document.getElementById('passwordInput');
             const emailValue = emailInput.value.trim();
@@ -228,7 +235,10 @@
             // Redirect to index.html
             alert('Login successful!');
             window.location.href = '../../index.html';
-        });
+        }
+
+        document.getElementById('loginButton').addEventListener('click', login);
+        document.body.addEventListener("keyup", login);
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../scripts/script.js"></script>
