Added initial custom alerts.

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
     </div>
     <div class="end_line"></div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="website/scripts/script.js"></script>
+    <script src="website/scripts/script.js" type="module"></script>
 
 
 </body>
